--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,8 @@ Uploaders: Fathi Boudra <fabo@debian.org>,
            Timo Jyrinki <timo@debian.org>,
            Dmitry Shachnev <mitya57@debian.org>
 Build-Depends: debhelper (>= 9),
+               libgtk2.0-dev,
+               libx11-dev,
                pkg-kde-tools,
                qtbase5-private-dev,
 Standards-Version: 3.9.6
