Update the package description to mention the GTK+ platform theme.

--- a/debian/control
+++ b/debian/control
@@ -33,3 +33,8 @@ Description: Qt 5 extra widget styles
   - Cleanlooks
   - Motif
   - Plastique
+  - GTK+ 2
+ .
+ It also provides the GTK+ 2 platformtheme, which you would likely want
+ to use if you want the GTK+ 2 style. Export QT_QPA_PLATFORMTHEME=gtk2 to
+ enable it for all Qt applications.
