--- a/debian/control
+++ b/debian/control
@@ -25,6 +25,8 @@ Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${misc:Depends}, ${shlibs:Depends}
+Breaks: libqt5libqgtk2 (<< 5.7)
+Replaces: libqt5libqgtk2 (<< 5.7)
 Description: Qt 5 extra widget styles
  Qt is a cross-platform C++ application framework. Qt's primary feature
  is its rich set of widgets that provide standard GUI functionality.
