--- a/debian/control
+++ b/debian/control
@@ -17,8 +17,8 @@ Build-Depends: debhelper (>= 9),
                qtbase5-private-dev,
 Standards-Version: 3.9.6
 Homepage: http://qt-project.org/
-Vcs-Git: git://anonscm.debian.org/pkg-kde/qt/qtstyleplugins.git
-Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/qt/qtstyleplugins.git
+Vcs-Git: https://anonscm.debian.org/git/pkg-kde/qt/qtstyleplugins.git
+Vcs-Browser: https://anonscm.debian.org/cgit/pkg-kde/qt/qtstyleplugins.git
 
 Package: qt5-style-plugins
 Architecture: any
