Add two more build-dependencies: libegl1-mesa-dev and libmtdev-dev.

--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,9 @@ Uploaders: Fathi Boudra <fabo@debian.org>,
            Timo Jyrinki <timo@debian.org>,
            Dmitry Shachnev <mitya57@debian.org>
 Build-Depends: debhelper (>= 9),
+               libegl1-mesa-dev,
                libgtk2.0-dev,
+               libmtdev-dev,
                libx11-dev,
                pkg-kde-tools,
                qtbase5-private-dev,
