limit libmtdev-dev B-D as linux-any

--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Uploaders: Fathi Boudra <fabo@debian.org>,
 Build-Depends: debhelper (>= 9),
                libegl1-mesa-dev,
                libgtk2.0-dev,
-               libmtdev-dev,
+               libmtdev-dev [linux-any],
                libx11-dev,
                pkg-kde-tools,
                qtbase5-private-dev,
