--- a/debian/control
+++ b/debian/control
@@ -18,8 +18,8 @@ Build-Depends: debhelper (>= 11),
                qtbase5-private-dev,
 Standards-Version: 4.0.0
 Homepage: http://qt-project.org/
-Vcs-Git: https://anonscm.debian.org/git/pkg-kde/qt/qtstyleplugins.git
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-kde/qt/qtstyleplugins.git
+Vcs-Git: https://salsa.debian.org/qt-kde-team/qt/qtstyleplugins.git
+Vcs-Browser: https://salsa.debian.org/qt-kde-team/qt/qtstyleplugins
 
 Package: qt5-style-plugins
 Architecture: any
