--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: qtstyleplugins-src
 Section: libs
 Priority: optional
-Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
+Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
+XSBC-Original-Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Fathi Boudra <fabo@debian.org>,
            Modestas Vainius <modax@debian.org>,
            Sune Vuorela <debian@pusling.com>,
@@ -16,7 +17,7 @@ Build-Depends: debhelper (>= 9),
                libmtdev-dev [linux-any],
                libx11-dev,
                pkg-kde-tools,
-               qtbase5-private-dev,
+               qtbase5-private-dev
 Standards-Version: 4.0.0
 Homepage: http://qt-project.org/
 Vcs-Git: https://anonscm.debian.org/git/pkg-kde/qt/qtstyleplugins.git
@@ -26,19 +27,84 @@ Package: qt5-style-plugins
 Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libqt5libqgtk2 (<< 5.7)
-Replaces: libqt5libqgtk2 (<< 5.7)
+Depends: qt5-style-platform-gtk2 (= ${binary:Version}),
+         qt5-style-plugin-blackberry (= ${binary:Version}),
+         qt5-style-plugin-cleanlooks (= ${binary:Version}),
+         qt5-style-plugin-gtk2 (= ${binary:Version}),
+         qt5-style-plugin-motif (= ${binary:Version}),
+         qt5-style-plugin-plastique (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Description: Qt 5 extra widget styles
  Qt is a cross-platform C++ application framework. Qt's primary feature
  is its rich set of widgets that provide standard GUI functionality.
  .
- This package contains the following widget styles:
-  - Cleanlooks
-  - Motif
-  - Plastique
-  - GTK+ 2
+ This is a metapackage which pulls in all available styles and the GTK 2
+ Platform Theme.
+
+Package: qt5-style-plugin-cleanlooks
+Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Description: Qt 5 extra widget styles - Cleanlooks
+ Qt is a cross-platform C++ application framework. Qt's primary feature
+ is its rich set of widgets that provide standard GUI functionality.
  .
- It also provides the GTK+ 2 platformtheme, which you would likely want
- to use if you want the GTK+ 2 style. Export QT_QPA_PLATFORMTHEME=gtk2 to
- enable it for all Qt applications.
+ This package contains the Cleanlooks widget style.
+
+Package: qt5-style-plugin-motif
+Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Description: Qt 5 extra widget styles - Motif
+ Qt is a cross-platform C++ application framework. Qt's primary feature
+ is its rich set of widgets that provide standard GUI functionality.
+ .
+ This package contains the Motif widget style.
+
+Package: qt5-style-plugin-plastique
+Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Description: Qt 5 extra widget styles - Plastique
+ Qt is a cross-platform C++ application framework. Qt's primary feature
+ is its rich set of widgets that provide standard GUI functionality.
+ .
+ This package contains the Plastique widget style.
+
+Package: qt5-style-plugin-blackberry
+Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Description: Qt 5 extra widget styles - Blackberry
+ Qt is a cross-platform C++ application framework. Qt's primary feature
+ is its rich set of widgets that provide standard GUI functionality.
+ .
+ This package contains the Blackberry widget style.
+
+Package: qt5-style-plugin-gtk2
+Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Description: Qt 5 extra widget styles - GTK 2
+ Qt is a cross-platform C++ application framework. Qt's primary feature
+ is its rich set of widgets that provide standard GUI functionality.
+ .
+ This package contains the GTK 2 widget style.
+
+Package: qt5-style-platform-gtk2
+Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Recommends: qt5-style-plugin-gtk2
+Description: Qt 5 extra widget styles - GTK 2 Platform
+ Qt is a cross-platform C++ application framework. Qt's primary feature
+ is its rich set of widgets that provide standard GUI functionality.
+ .
+ This package contains the GTK 2 Platform Theme.
