--- a/debian/rules
+++ b/debian/rules
@@ -15,7 +15,7 @@ override_dh_auto_configure:
 	qmake #QT_BUILD_PARTS+=tests
 
 override_dh_auto_install:
-	dh_auto_install
-	
 	# Remove the development stuff of the installed plugins
-	rm -rfv $(CURDIR)/debian/qt5-style-plugins/usr/lib/*/cmake/
+	rm -rfv $(CURDIR)/debian/tmp/usr/lib/*/cmake/
+
+	dh_auto_install
