--- a/debian/control
+++ b/debian/control
@@ -25,19 +25,82 @@ Package: qt5-style-plugins
 Architecture: any
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
-Depends: ${misc:Depends}, ${shlibs:Depends}
-Breaks: libqt5libqgtk2 (<< 5.7)
-Replaces: libqt5libqgtk2 (<< 5.7)
+Depends: qt5-gtk2-platformtheme (= ${binary:Version}),
+         qt5-style-plugin-blackberry (= ${binary:Version}),
+         qt5-style-plugin-cleanlooks (= ${binary:Version}),
+         qt5-style-plugin-motif (= ${binary:Version}),
+         qt5-style-plugin-plastique (= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Description: Qt 5 extra widget styles
  Qt is a cross-platform C++ application framework. Qt's primary feature
  is its rich set of widgets that provide standard GUI functionality.
  .
- This package contains the following widget styles:
-  - Cleanlooks
-  - Motif
-  - Plastique
-  - GTK+ 2
+ This is a metapackage which pulls in all available styles and the GTK+ 2
+ platform theme.
+
+Package: qt5-style-plugin-blackberry
+Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Breaks: qt5-style-plugins (<< 5.0.0+git23.g335dbec-3~)
+Replaces: qt5-style-plugins (<< 5.0.0+git23.g335dbec-3~)
+Description: Qt 5 extra widget styles - Blackberry
+ Qt is a cross-platform C++ application framework. Qt's primary feature
+ is its rich set of widgets that provide standard GUI functionality.
  .
- It also provides the GTK+ 2 platformtheme, which you would likely want
- to use if you want the GTK+ 2 style. Export QT_QPA_PLATFORMTHEME=gtk2 to
- enable it for all Qt applications.
+ This package contains the Blackberry widget style.
+
+Package: qt5-style-plugin-cleanlooks
+Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Breaks: qt5-style-plugins (<< 5.0.0+git23.g335dbec-3~)
+Replaces: qt5-style-plugins (<< 5.0.0+git23.g335dbec-3~)
+Description: Qt 5 extra widget styles - Cleanlooks
+ Qt is a cross-platform C++ application framework. Qt's primary feature
+ is its rich set of widgets that provide standard GUI functionality.
+ .
+ This package contains the Cleanlooks widget style.
+
+Package: qt5-style-plugin-motif
+Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Breaks: qt5-style-plugins (<< 5.0.0+git23.g335dbec-3~)
+Replaces: qt5-style-plugins (<< 5.0.0+git23.g335dbec-3~)
+Description: Qt 5 extra widget styles - Motif
+ Qt is a cross-platform C++ application framework. Qt's primary feature
+ is its rich set of widgets that provide standard GUI functionality.
+ .
+ This package contains the Motif widget style.
+
+Package: qt5-style-plugin-plastique
+Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Breaks: qt5-style-plugins (<< 5.0.0+git23.g335dbec-3~)
+Replaces: qt5-style-plugins (<< 5.0.0+git23.g335dbec-3~)
+Description: Qt 5 extra widget styles - Plastique
+ Qt is a cross-platform C++ application framework. Qt's primary feature
+ is its rich set of widgets that provide standard GUI functionality.
+ .
+ This package contains the Plastique widget style.
+
+Package: qt5-gtk2-platformtheme
+Architecture: any
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Breaks: libqt5libqgtk2 (<< 5.7), qt5-style-plugins (<< 5.0.0+git23.g335dbec-3~)
+Replaces: libqt5libqgtk2 (<< 5.7), qt5-style-plugins (<< 5.0.0+git23.g335dbec-3~)
+Description: Qt 5 extra widget styles - GTK+ 2 Platform theme
+ Qt is a cross-platform C++ application framework. Qt's primary feature
+ is its rich set of widgets that provide standard GUI functionality.
+ .
+ This package contains the GTK+ 2 style and platform theme. Export
+ QT_QPA_PLATFORMTHEME=gtk2 to enable it for all Qt applications.
